--- a/DeformationGraph.vcxproj
+++ b/DeformationGraph.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -19,6 +19,9 @@
     <ClInclude Include="src\DeformGraph.h" />
     <ClInclude Include="src\TriMesh.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{ACB93890-4121-4A2E-952F-73CAD23E3736}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -29,12 +32,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -49,6 +54,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <EmbedManifest>false</EmbedManifest>
+    <Linkage-freeglut>static</Linkage-freeglut>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -60,13 +66,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\Program Files\Eigen\include;D:\Program Files\flann\include;D:\Program Files\PCL 1.6.0\include\pcl-1.6;D:\Program Files\Boost\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\PCL1.8.1\3rdParty\Eigen\eigen3;E:\PCL1.8.1\3rdParty\FLANN\include;E:\PCL1.8.1\include\pcl-1.8;E:\PCL1.8.1\3rdParty\Boost\include\boost-1_64</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\Program Files\flann\lib;D:\Program Files\PCL 1.6.0\lib;D:\Program Files\Boost\lib;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>flann.lib;pcl_keypoints_debug.lib;pcl_kdtree_debug.lib;pcl_common_debug.lib;pcl_search_debug.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\PCL1.8.1\3rdParty\FLANN\lib;E:\PCL1.8.1\lib;E:\PCL1.8.1\3rdParty\Boost\lib;E:\projects2\DeformationGraph\packages\freeglut.2.8.1.15\build\native\lib\v110\Win32\Debug\static</AdditionalLibraryDirectories>
+      <AdditionalDependencies>flann.lib;pcl_keypoints_debug.lib;pcl_kdtree_debug.lib;pcl_common_debug.lib;pcl_search_debug.lib;legacy_stdio_definitions.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -78,18 +84,27 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\Program Files\Eigen\include;D:\Program Files\flann\include;D:\Program Files\PCL 1.6.0\include\pcl-1.6;D:\Program Files\Boost\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\PCL1.8.1\3rdParty\Eigen\eigen3;E:\PCL1.8.1\3rdParty\FLANN\include;E:\PCL1.8.1\include\pcl-1.8;E:\PCL1.8.1\3rdParty\Boost\include\boost-1_64</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>D:\Program Files\flann\lib;D:\Program Files\PCL 1.6.0\lib;D:\Program Files\Boost\lib;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>flann.lib;pcl_keypoints_release.lib;pcl_kdtree_release.lib;pcl_common_release.lib;pcl_search_release.lib;</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\PCL1.8.1\3rdParty\FLANN\lib;E:\PCL1.8.1\lib;E:\PCL1.8.1\3rdParty\Boost\lib;E:\projects\freeglut-3.0.0\build\lib\Release</AdditionalLibraryDirectories>
+      <AdditionalDependencies>flann.lib;pcl_keypoints_release.lib;pcl_kdtree_release.lib;pcl_common_release.lib;pcl_search_release.lib;;legacy_stdio_definitions.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="packages\freeglut.redist.2.8.1.15\build\native\freeglut.redist.targets" Condition="Exists('packages\freeglut.redist.2.8.1.15\build\native\freeglut.redist.targets')" />
+    <Import Project="packages\freeglut.2.8.1.15\build\native\freeglut.targets" Condition="Exists('packages\freeglut.2.8.1.15\build\native\freeglut.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\freeglut.redist.2.8.1.15\build\native\freeglut.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\freeglut.redist.2.8.1.15\build\native\freeglut.redist.targets'))" />
+    <Error Condition="!Exists('packages\freeglut.2.8.1.15\build\native\freeglut.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\freeglut.2.8.1.15\build\native\freeglut.targets'))" />
+  </Target>
 </Project>
